Bug 159835 - Styles pane burger menu not fully populated on the first attempt
Summary: Styles pane burger menu not fully populated on the first attempt
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Styles
  Show dependency treegraph
 
Reported: 2024-02-22 07:34 UTC by lvm
Modified: 2024-06-27 14:44 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lvm 2024-02-22 07:34:14 UTC
prerequisites: styles pane is closed

1.      press F11 to open the styles pane
2.      click its burger menu (≡)
3.      the menu has just four items including both dock and undock, clicking on undock (if docked) or dock (if undocked) does nothing
4.      close the menu and click on the burger menu again - now it has many items, but only one of (dock|undock) depending on the current pane state, and it works
Comment 1 Bogaboga Man 2024-02-22 09:18:05 UTC
Reproduced on Windows 11 Home with ver. 24.2.0.3
Comment 2 lvm 2024-02-22 11:37:30 UTC
I however cannot reproduce it on

Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-GB (en_GB.UTF-8); UI: en-GB
Calc: threaded

so it is either 24-specific or windows-specific.
Comment 3 Rafael Lima 2024-02-22 20:18:50 UTC
This is reproducible on Linux as well

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 52806e4c1e241d12419373cb0ed013356e12c4b8
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 4 gladys 2024-06-07 12:12:52 UTC
Bibisected with windows 10, version 24.2 which seem to points to 6564b454e3867855842c2e42233f4cb7ed114cef, but its not sure

Author:     Michael Weghorn <m.weghorn@posteo.de>
AuthorDate: Tue Aug 22 10:26:32 2023 +0200

commit message: tdf#141101 tdf#101886 a11y: Restore previous focus on col/line popup close

Don't request focus for the color window
before the menu button popup opens.

Doing so would prevent properly restoring focus to the
menu button itself after the popup closes again.

Without this change in place, the call to
`MenuButton::Activate` in `MenuButton::ExecuteMenu (s. frame 14/15
in below backtrace) would already set focus to the "Automatic" button
in the color window.
Comment 5 Buovjaga 2024-06-14 06:07:11 UTC
(In reply to gladys from comment #4)
> Bibisected with windows 10, version 24.2 which seem to points to
> 6564b454e3867855842c2e42233f4cb7ed114cef, but its not sure
> 
> Author:     Michael Weghorn <m.weghorn@posteo.de>
> AuthorDate: Tue Aug 22 10:26:32 2023 +0200
> 
> commit message: tdf#141101 tdf#101886 a11y: Restore previous focus on
> col/line popup close
> 
> Don't request focus for the color window
> before the menu button popup opens.
> 
> Doing so would prevent properly restoring focus to the
> menu button itself after the popup closes again.
> 
> Without this change in place, the call to
> `MenuButton::Activate` in `MenuButton::ExecuteMenu (s. frame 14/15
> in below backtrace) would already set focus to the "Automatic" button
> in the color window.

Confirmed with linux-64-24.2 repo that f075fa01cb4f74185f13eb0a8d7f84cf1f47af49 is the cause.
Comment 6 Commit Notification 2024-06-18 03:27:19 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8a10012039204b208aea3bc2f9da9fe1162c4a2a

tdf#159835 sfx2: Use reference instead of pointer

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-06-18 03:27:21 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/008c3049b8aaaf3d40675bddc31b0198493fa761

tdf#159835 sfx2: Move logic to populate sidebar menus to TabBar

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-06-18 03:27:24 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ca364f8f16f0c64589d15e7bc44fe6eaebe8f5b2

tdf#159835 sfx2: Simplify TabBar::OnToolboxClicked

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-06-19 07:24:34 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/b701d04976059f26bc0b8bd9f4f01bb1c5e11376

tdf#159835 sfx2: Use reference instead of pointer

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-06-19 07:24:37 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/2e1bfcab2ac61f773ef3fac29ea08396fe3db71d

tdf#159835 sfx2: Move logic to populate sidebar menus to TabBar

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-06-19 07:25:39 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/9895117d877cc5bd7ebb27a69e985a0770448427

tdf#159835 sfx2: Simplify TabBar::OnToolboxClicked

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2024-06-19 23:58:17 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d7aeaeafc32f78ca38942868f965bae0e6c376b1

tdf#159835 Deduplicate a few lines in DockingWindow::SetFloatingMode

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2024-06-20 03:52:46 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/504e5501fce3f53d15b53f344c20e4404ff8f3db

tdf#159835 sfx2 Connect SidebarController menu handlers earlier

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2024-06-20 03:52:49 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c2c6a5d32f8c536ab816630583f986860202c4a9

tdf#159835 vcl: Notify when floating window toggled

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2024-06-20 03:52:51 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/daed96f0818b1baae5de8b74b866009d7d89f853

tdf#159835 sfx2: Keep sidebar menu up to date

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Michael Weghorn 2024-06-20 04:53:22 UTC
Fixed in master. Backports for 24-8 and 24-2 pending in Gerrit.
Comment 17 Commit Notification 2024-06-20 06:38:13 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/3867ff745d92d9ad5455647af799b4dd96eec1fb

tdf#159835 Deduplicate a few lines in DockingWindow::SetFloatingMode

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2024-06-20 07:27:27 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/cd04b6738669b795895b81d64f399f309615b616

tdf#159835 sfx2 Connect SidebarController menu handlers earlier

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2024-06-20 07:28:30 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/aa0a3b8dc53b1a9a14995351b1a024478c8f0bc8

tdf#159835 vcl: Notify when floating window toggled

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2024-06-20 07:28:32 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/f556e99ce3d6a73ac13559ba3eeefe2d59bc6231

tdf#159835 sfx2: Keep sidebar menu up to date

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2024-06-26 15:59:45 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/879bcc88759d7dd033e0ee667daee0d2a743cf06

tdf#159835 sfx2: Skip sidebar menu update for gtk4 to work around crash

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Commit Notification 2024-06-26 21:00:26 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/a0b317a321146cac545aacd16b08fa84ce48d998

tdf#159835 sfx2: Skip sidebar menu update for gtk4 to work around crash

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Commit Notification 2024-06-27 14:41:48 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/384331baab1166d9a7abdebc25e6ae1a1772179f

tdf#159835 sfx2: Use reference instead of pointer

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 Commit Notification 2024-06-27 14:41:50 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/4cd1c580a7eb20ab36623295c35c49cb63a0ee65

tdf#159835 sfx2: Move logic to populate sidebar menus to TabBar

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 25 Commit Notification 2024-06-27 14:42:53 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/a23edf01286db6131e9841887ff55bb6b333b28b

tdf#159835 sfx2: Simplify TabBar::OnToolboxClicked

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 26 Commit Notification 2024-06-27 14:42:56 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/6551e6160e60d05584f4fe5e6a11a4f1d639d945

tdf#159835 Deduplicate a few lines in DockingWindow::SetFloatingMode

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 27 Commit Notification 2024-06-27 14:42:58 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/265dad840da65377475e236ed7e031645d9e3138

tdf#159835 sfx2 Connect SidebarController menu handlers earlier

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 Commit Notification 2024-06-27 14:44:01 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/1c8baa677e5ede94a60de0d6d041e0599d7b5fc0

tdf#159835 vcl: Notify when floating window toggled

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 29 Commit Notification 2024-06-27 14:44:06 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/2318ce7f71110beca1d89dc9fd33e6d3a98ede1e

tdf#159835 sfx2: Keep sidebar menu up to date

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 30 Commit Notification 2024-06-27 14:44:09 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/212ec979787d22acd0c0518ea19cf9e9a9d239b2

tdf#159835 sfx2: Skip sidebar menu update for gtk4 to work around crash

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.