tdf#159835 sfx2: Use reference instead of pointer

This e.g. makes it clear that this is never null.
Also use an `m` prefix for the class member.

Change-Id: Ia66245f17e7f0ca9e57750e8606c8ccc1387eb97
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169004
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit 8a10012039204b208aea3bc2f9da9fe1162c4a2a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169244
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>