include/sfx2/sidebar/TabBar.hxx
@@ -61,7 +61,7 @@ public:
         const css::uno::Reference<css::frame::XFrame>& rxFrame,
         ::std::function<void (const OUString& rsDeckId)> aDeckActivationFunctor,
         PopupMenuProvider aPopupMenuProvider,
-        SidebarController* rParentSidebarController);
+        SidebarController& rParentSidebarController);
 
     weld::Container* GetContainer() { return m_xContainer.get(); }
 
@@ -127,9 +127,8 @@ private:
 
     DECL_LINK(OnToolboxClicked, weld::Toggleable&, void);
 
-    SidebarController* pParentSidebarController;
+    SidebarController& mrParentSidebarController;
     std::unique_ptr<svt::AcceleratorExecute> mpAccel;
-
 };
 
 
